Mirror sync c2f458ea (#142)
* Mirror sync c2f458ea (2026-09-08T15:07:12Z)

* fix(tests): skip the VKG-publish barrier unit test when tests/integ is stripped

`test_integ_vkg_publish_barrier.py` loads `_wait_for_vkg_publish` out of
`tests/integ/test_accept_ontology_components.py` by path. The public mirror
strips `**/tests/integ/`, so on every mirror-sync PR the module-scoped fixture
raised `FileNotFoundError` at setup, failing `ontology-engine:test` and with it
the whole unit-test job (aws/context-ontology-accelerator#142, and the Sept 3
sync before it). Internally the file is present and the test passes, so the
breakage was invisible on the internal pipeline.

Add the module-level existence guard already used by
`packages/context-manager/tests/unit/test_integ_provision_cli.py`: skip with
"tests/integ/ is absent or incomplete in this checkout (public mirror)".

Root cause of the miss: `tests/unit/test_mirror_paths.py` already guards this
exact class of bug, but its detector only matched the `"tests" / "integ"`
spelling. This test writes `parents[1] / "integ"`, naming no "tests" segment, so
it slipped through. The detector now also matches a bare `/ "integ"` or
`/ "cdk"` path segment, so the next short-form reference is caught pre-merge
instead of after it reaches the mirror.

User-visible effect: unit tests run to completion on a clean clone of the public
repo. Previously anyone cloning the mirror and running `make test-unit` hit four
collection errors in ontology-engine that had nothing to do with their checkout.

Verification:
- `pytest packages/ontology-engine/tests/unit/test_integ_vkg_publish_barrier.py`
  -> 4 passed with tests/integ present; 1 skipped with it moved aside.
- `pytest packages/ontology-engine/tests/unit` -> 2081 passed, 1 skipped.
- `pytest tests/unit` -> 102 passed. Reverting only the guard makes
  test_mirror_paths.py fail and name the offender.
- `make lint` -> clean for all 12 projects.

---------

Co-authored-by: context-ontology-accelerator